modified:   curriculo.html 	new file:   estudo.html 	modified:   index.html 	modified:   portifolio.html 	modified:   sobremim.html
	modified:   curriculo.html
	new file:   estudo.html
	new file:   img/fundo.jpg
	modified:   index.html
	new file:   inicio.css
	modified:   portifolio.html
	modified:   sobremim.html
	modified:   style.css

--- a/estudo.html
+++ b/estudo.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Carlos César para trabalho da faculdade</title>
-    <link rel="stylesheet" href="inicio.css">
+    <title>ESTUDO</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body class="corpo">
-
-    <main class="conteudo">
     <header class="cabecalho">
         <h1>CABEÇALHO</h1>
         <ul class="itens">
+            <li class="paginas"><a href="index.html">💻INICIO💻</a></li>
             <li class="paginas"><a href="sobremim.html">🤠SOBRE MIM🤠</a></li>
             <li class="paginas"><a href="portifolio.html">💸PORTIFOLIO💸</a></li>
             <li class="paginas"><a href="curriculo.html">💼CURRICULO💼</a></li>
-            <li class="paginas"><a href="estudo.html">📚ESTUDOS📚</a></li>
         </ul>
     </header>
-</main>
+
+    
+
+    
 </body>
 </html>
