--- a/portifolio.html
+++ b/portifolio.html
@@ -6,13 +6,14 @@
     <title>PORTIFOLIO</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="corpo">
     <header class="cabecalho">
         <h1>CABEÇALHO</h1>
         <ul class="itens">
-            <li class="paginas"><a href="sobremim.html">SOBRE MIM</a></li>
-            <li class="paginas"><a href="portifolio.html">PORTIFOLIO</a></li>
-            <li class="paginas"><a href="curriculo.html">CURRICULO</a></li>
+            <li class="paginas"><a href="index.html">💻INICIO💻</a></li>
+            <li class="paginas"><a href="sobremim.html">🤠SOBRE MIM🤠</a></li>
+            <li class="paginas"><a href="curriculo.html">💼CURRICULO💼</a></li>
+            <li class="paginas"><a href="estudo.html">📚ESTUDOS📚</a></li>
         </ul>
     </header>
 
