modified:   curriculo.html 	new file:   doccurriculo.pdf 	deleted:    estudo.html 	new file:   img/africa.jpeg 	new file:   img/cs2.jpeg 	new file:   img/expo.mp4 	new file:   img/guri.png 	new file:   img/machu.jpg 	new file:   img/ny.jpg 	new file:   img/pc.jpg 	modified:   index.html 	modified:   inicio.css 	modified:   portifolio.html 	modified:   sobremim.html 	modified:   style.css 	new file:   viagens.html

--- a/curriculo.html
+++ b/curriculo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CURRICULO</title>
+    <title>💼CURRICULO💼</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="corpo">
@@ -13,11 +13,16 @@
             <li class="paginas"><a href="index.html">💻INICIO💻</a></li>
             <li class="paginas"><a href="sobremim.html">🤠SOBRE MIM🤠</a></li>
             <li class="paginas"><a href="portifolio.html">💸PORTIFOLIO💸</a></li>
-            <li class="paginas"><a href="estudo.html">📚ESTUDOS📚</a></li>
+            <li class="paginas"><a href="viagens.html">✈️VIAGENS✈️</a></li>
         </ul>
     </header>
 
-    
+    <main class="curriculo">
+    <object class="pdf"  data="doccurriculo.pdf" type="application/pdf">
+        <p>Seu navegador não tem um plugin pra PDF</p>
+    </object>
+
+    </main>
 
     
 </body>
