--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Carlos César para trabalho da faculdade</title>
+    <title>💻INICIO SITE CARLOS CESAR💻</title>
     <link rel="stylesheet" href="inicio.css">
 </head>
 <body class="corpo">
@@ -15,7 +15,7 @@
             <li class="paginas"><a href="sobremim.html">🤠SOBRE MIM🤠</a></li>
             <li class="paginas"><a href="portifolio.html">💸PORTIFOLIO💸</a></li>
             <li class="paginas"><a href="curriculo.html">💼CURRICULO💼</a></li>
-            <li class="paginas"><a href="estudo.html">📚ESTUDOS📚</a></li>
+            <li class="paginas"><a href="viagens.html">✈️VIAGENS✈️</a></li>
         </ul>
     </header>
 </main>
