modified:   curriculo.html 	modified:   index.html 	modified:   inicio.css 	modified:   portifolio.html 	modified:   sobremim.html 	modified:   style.css 	modified:   viagens.html

--- a/curriculo.html
+++ b/curriculo.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💼CURRICULO💼</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<!-- DECLARAÇÃO SIMPLES DE HTML -->
+
 <body class="corpo">
     <header class="cabecalho">
         <h1>CABEÇALHO</h1>
@@ -14,16 +17,18 @@
             <li class="paginas"><a href="sobremim.html">🤠SOBRE MIM🤠</a></li>
             <li class="paginas"><a href="portifolio.html">💸PORTIFOLIO💸</a></li>
             <li class="paginas"><a href="viagens.html">✈️VIAGENS✈️</a></li>
+            <!-- CABECALHO MENU DE TODAS PAGINAS -->
         </ul>
     </header>
 
     <main class="curriculo">
-    <object class="pdf"  data="doccurriculo.pdf" type="application/pdf">
-        <p>Seu navegador não tem um plugin pra PDF</p>
-    </object>
-
+        <object class="pdf" data="doccurriculo.pdf" type="application/pdf">
+            <p>Seu navegador não tem um plugin pra PDF</p>
+        </object>
+        <!-- CHAMA O DOCUMENTO QUE MOSTRA MEU CURRICULO -->
     </main>
 
-    
+
 </body>
+
 </html>
