--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>💻INICIO SITE CARLOS CESAR💻</title>
     <link rel="stylesheet" href="inicio.css">
+    <!-- DECLARAÇÃO SIMPLES DE HTML -->
 </head>
-<body class="corpo">
 
+<body class="corpo">
     <main class="conteudo">
-    <header class="cabecalho">
-        <h1>CABEÇALHO</h1>
-        <ul class="itens">
-            <li class="paginas"><a href="sobremim.html">🤠SOBRE MIM🤠</a></li>
-            <li class="paginas"><a href="portifolio.html">💸PORTIFOLIO💸</a></li>
-            <li class="paginas"><a href="curriculo.html">💼CURRICULO💼</a></li>
-            <li class="paginas"><a href="viagens.html">✈️VIAGENS✈️</a></li>
-        </ul>
-    </header>
-</main>
-    
+        <header class="cabecalho">
+            <h1>CABEÇALHO</h1>
+            <ul class="itens">
+                <li class="paginas"><a href="sobremim.html">🤠SOBRE MIM🤠</a></li>
+                <li class="paginas"><a href="portifolio.html">💸PORTIFOLIO💸</a></li>
+                <li class="paginas"><a href="curriculo.html">💼CURRICULO💼</a></li>
+                <li class="paginas"><a href="viagens.html">✈️VIAGENS✈️</a></li>
+                <!-- CABECALHO MENU DE TODAS PAGINAS -->
+            </ul>
+        </header>
+    </main>
 </body>
+
 </html>
