modified:   curriculo.html 	modified:   index.html 	modified:   inicio.css 	modified:   portifolio.html 	modified:   sobremim.html 	modified:   style.css 	modified:   viagens.html

--- a/sobremim.html
+++ b/sobremim.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <!-- DECLARAÇÃO SIMPLES DE HTML -->
 </head>
-
 <body class="corpo">
     <header class="cabecalho">
         <h1>CABEÇALHO</h1>
@@ -20,33 +18,15 @@
             <!-- CABECALHO MENU DE TODAS PAGINAS -->
         </ul>
     </header>
-
-
     <main class="conteudo">
         <h1>🤠SOBRE MIM🤠</h1>
-
-        <h2>Eu sou o Carlos César,
-            tenho 18 anos e sou alto pra caramba,
-            com meus 1,85 metros. Gosto de Jogar CS, É adrenalina pura, me divirto demais nesse jogo.
+        <h2>Eu sou o Carlos César, tenho 18 anos e sou alto pra caramba, com meus 1,85 metros. Gosto de Jogar CS, É adrenalina pura, me divirto demais nesse jogo.
         </h2>
-
         <img class="foto" src="img/cs2.jpeg" alt="wallpaper do cs2">
-
         <br>
-
-        <h2>Mas não é só de jogos que eu vivo, não!
-            Curtir com meus amigos é uma das melhores coisas do mundo.
-            Seja num rolê no parque ou numa festa, tô sempre rodeado de gente bacana.
-            Eu sou o cara extrovertido da turma, animando todo mundo com meu jeito espontâneo.</h2>
-
+        <h2>Mas não é só de jogos que eu vivo, não! Curtir com meus amigos é uma das melhores coisas do mundo. Seja num rolê no parque ou numa festa, tô sempre rodeado de gente bacana. Eu sou o cara extrovertido da turma, animando todo mundo com meu jeito espontâneo.</h2>
         <img class="foto" src="img/guri.png" alt="foto de carlos com amigos">
-
         <!-- ACIMA EU CHAMO 2 IMAGENS E COLOCO OS TEXTOS QUE SE REFEREM A MIM E MINHAS CARACTERISTICAS  -->
-        <h2></h2>
-
     </main>
-
-
 </body>
-
 </html>
