--- a/viagens.html
+++ b/viagens.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <!-- DECLARAÇÃO SIMPLES DE HTML -->
 </head>
-
 <body class="corpo">
     <header class="cabecalho">
         <h1>CABEÇALHO</h1>
@@ -20,45 +18,26 @@
             <!-- CABECALHO MENU DE TODAS PAGINAS -->
         </ul>
     </header>
-
     <main class="conteudo">
         <h1>✈️VIAGENS✈️</h1>
-
         <h2><br>Estados Unidos:</br>
             Uma viagem incrível pelos Estados Unidos me levou a Nova York,
             a cidade que nunca dorme. Caminhei pela Times Square, visitei a Estátua da Liberdade e
             me perdi em meio aos arranha-céus de Manhattan. Foi uma experiência intensa e cheia de energia!
         </h2>
-
-        <img class="foto" src="img/ny.jpg" alt="foto de newyork">
-
-        <br>
-
+        <img class="foto" src="img/ny.jpg" alt="foto de newyork"><br>
         <h2><br>Machu Picchu:<br />
             Em uma jornada pela misteriosa Machu Picchu, fui transportado para um mundo antigo cheio de magia.
             Caminhei pela Trilha Inca, explorando paisagens deslumbrantes e ruínas impressionantes.
             A vista do topo foi simplesmente de tirar o fôlego!</h2>
-
         <img class="foto" src="img/machu.jpg" alt="foto machupichu">
-
         <h2><br>África:<br />
-
             Nas savanas da África, vivi uma aventura selvagem. Fiz safáris emocionantes, observando leões, elefantes
             e girafas em seu habitat natural. Conheci culturas tribais e me maravilhei com a riqueza e diversidade desse
             continente impressionante.</h2>
-
         <img class="foto" src="img/africa.jpeg" alt="foto de arvore na africa">
-
-
-        <h2></h2>
-
-
         <!-- ACIMA SÃO 3 FOTOS DE VIAGENS QUE EU NÃO FIZ, E ALGUNS TEXTOS SOBRE ESSES LUGARES ICONICOS NO PLANETA, SÃO 3 FOTOS 
                 E CADA UMA TEM UMA EXPLICAÇÃOZINHA DE COMO EU ME SENTI LÁ, KKKKKKK EU NEM FUI MAS OK -->
-
     </main>
-
-
 </body>
-
 </html>
